# my_package

./: README.md  mkdocs.yml  setup.cfg  test.sh
docs/: docs.md
report/test/: tests.xml
src/my_pip/: __init__.py  my_pip.py
tests/my_pip/: test_my_pip.py
