[metadata]
name = my_pip
version = 0.1.0
author = iamyanghee
author_email = yanghee.data@gmail.com
description = short_description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://iamyanghee.github.io/my_package
project_urls =
    Bug Tracker = https://github.com/iamyanghee/my_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license = GNU General Public License (GPL)
platform = macOS

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    my_pip-ping = my_pip:ping
